manifests-aws/locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
  namespace: default
  labels:
    app: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust-master
  template:
    metadata:
      labels:
        app: locust-master
    spec:
      containers:
      - name: locust
        image: locustio/locust:latest
        ports:
        - containerPort: 8089
          name: web-ui
        - containerPort: 5557
          name: master-p1
        - containerPort: 5558
          name: master-p2
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: locustfile
          mountPath: /home/locust
      volumes:
      - name: locustfile
        configMap:
          name: locust-script
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: default
  labels:
    app: locust-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      containers:
      - name: locust
        image: locustio/locust:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: locustfile
          mountPath: /home/locust
      volumes:
      - name: locustfile
        configMap:
          name: locust-script
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master-service
  namespace: default
  labels:
    app: locust-master
spec:
  type: LoadBalancer
  selector:
    app: locust-master
  ports:
  - name: web-ui
    protocol: TCP
    port: 8089
    targetPort: 8089
  - name: master-p1
    protocol: TCP
    port: 5557
    targetPort: 5557
  - name: master-p2
    protocol: TCP
    port: 5558
    targetPort: 5558
